src/www/less/site.less
html body {
    overflow-y: scroll;
    color: #eeeeee;
    background: #883333;
}
.as-label { // ability scores label
    display: inline-block;
    width: 105px;
}

.height-zero {
    overflow: hidden;
    transition: height 0.25s;
    height: 0 !important;
}

.output-column {
    position: relative;
}

.no-cards {
    margin-top: 32px;
}

.show-hide {
    font-size: 20px;
    display: inline-block;
    padding: 0 4px;
    cursor: pointer;
    color: #eeeeee;
}

.filters-wrapper {
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    align-content: center;
    justify-content: flex-start;
    
    h5 {
        display: inline-block;
        margin-right: 8px;
        color: #eeeeee !important;
    } 
}

.form-field span {
    display: none;
}

.form-field label {
    width: 100%;
}

input.form-control {
    padding: 19px 8px;
    font-size: 22px;
}

.show-hide-advanced-filter {
    padding: 10px;
    display: inline-block;
    position: relative;
    top: -4px;
}

.clear-input {
    position: relative;
    color: #666;
    left: 84%;
    top: -47px;
    width: 44px;
    height: 44px;
    text-align: center;
    font-size: 26px;
    cursor: pointer;
    font-family: verdana;
    padding: 0;
    margin: 0;
    display: block;
    padding-bottom: 44px;
    @media screen and (min-width: 321px) {
        left: 88%;
    }
    @media screen and (min-width: 481px) {
        left: 93%;
    }
    @media screen and (min-width: 769px) {
        left: 95%;
    }
    @media screen and (min-width: 993px) {
        left: 96%;
    }
    @media screen and (min-width: 1201) {
        left: 98%;
    }
}

.filterByText-wrapper {
    height: 70px;
}

.advanced-filters {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
    align-items: flex-start;
    align-content: flex-start;
}

.filter-group.filters-advanced {
    padding: 7px;
}
.filter-button-group {
    display: flex;
    flex-flow: row wrap;
}


.card {
    padding: 2px;
    color: #000000;
    
    h2, h3, h4, strong {
        color: #58180d;
    }

    h2 {
        font-size: 18px;
    }
    
    hr {
        border-top: 1px solid #58180d;
    }
    
    td, th {
        padding: 4px;
        border: 1px solid;
    }
    
    .closed-button {
        position: absolute;
        top: 1px;
        right: 5px;

        display: none;
    }
    
    .open-button {
        position: absolute;
        top: 10px;
        right: 10px;

        display: block;
    }

    .show-hide {
        color: #333333;
    }

    &-inner {
        padding: 0 7px;
        background: #eeeeee;
        border: 5px solid #883333;
        box-sizing: border-box;
        border-radius: 8px;
    }

    &-container {
        display: flex;
        flex-flow: row wrap;
        justify-content: flex-start;
        align-items: flex-start;
        align-content: flex-start;

        &[data-card-size=sm] {
            .card {
                padding: 2px;

                .closed-button {
                    position: absolute;
                    top: 10px;
                    right: 0;
                    display: block;
                    width: 100%;
                    height: 100%;
                }

                .open-button {
                    display: none;
                }

                &-inner {
                    padding: 14px 8px;
                    border: 1px solid;

                    .show-hide {
                        position: absolute;
                        top: 0;
                        right: 8px;
                        width: 100%;
                        height: 100%;
                        text-align: right;
                        color: #000000;
                    }

                    > h2 {
                        font-size: 18px;
                        display: block;
                        margin: 0;
                    }

                    .row {
                        display: block;
                    }
                }

                &-content {
                    overflow: hidden !important;
                    height: 0;


                    &.height-normal {
                        margin-top: 12px;
                        height: auto;
                    }
                }
            }
        }
    }

    &-property {
        margin: 0 0 3px;
    }
}

.card-size {
    &-controls {
        position: absolute;
        top: 0px;
        right: 0;
        width: auto;
        padding: 0 3px 3px 8px;
        color: #333333;
        border: 1px solid;
        background: #cceeff;

        &-title {
            position: relative;
            top: 2px;
            left: 4px;
            display: inline-block;
        }
    }

    .size-buttons {
        display: inline-block;
        margin-left: 12px;
    }
}

.btn {
    margin: 1px;
    color: #333333;
    border: 1px solid #000000;
    border-radius: 0;
    background: #eeeeee;

    &.active {
        color: #ffffff;
        background-color: #58180d;
    }

    &.name {
        width: 37px;
        padding: 10px 0;
        text-align: center;
    }

    &.lg, &.xl {
        display: none;
    }
}

@media (min-width: 768px) {
    .advanced-filters {
        max-height: 500px;
    }
    .btn {
        &.lg, &.xl {
            display: inline-block;
        }
    }

    .card-size-controls {
        top: 15px;
    }

    .card {
        font-size: 12px;

        &-inner {
            > h2 {
                font-size: 22px;
            }
        }

        &-property {
            line-height: 15px;
            display: block;
            margin: 0;
        }

        &-container {
            &[data-card-size=sm] {
                .card {
                    &-inner {
                        padding: 4px 8px;

                        .show-hide {
                            top: -10px;
                        }
                    }
                }
            }
            &[data-card-size=md] {
                .card {
                    font-size: 12px;
                    width: 33.33333333%;

                    &-inner > h2 {
                        font-size: 22px;
                    }

                    &-property {
                        line-height: 15px;
                        display: block;
                        margin: 0;
                    }
                }
            }

            &[data-card-size=lg] {
                .card {
                    width: 50%;
                }
            }

            &[data-card-size=xl] {
                .card {
                    width: 100%;
                }
            }
        }
    }
}

